Bug 239583 - mail lost when getting fetchmailed messages. r=bienvenu@nventure.com, sr=mscott@mozilla.org, a=chofmann@mozilla.org